# VideoSynopsis

./: CMakeLists.txt  README.md
data/VOC0712Plus/: .labelmap_voc.prototxt.swp
include/: synopsis.h
include/caffe/: VehicleColorRecognition.h
include/caffe/proto/: caffe.pb.h
include/detector/: Detector.h  ssd_detect.hpp
include/tracker/: ImageTracker.h  PAOT.h  Tracker.h
include/tracker/predictor/: Predictor.h  StationaryPredictor.h
include/tracker/predictor/kalman/: KalmanPredictor.h
include/tracker/predictor/particle/: ParticleFilter.h  ParticlePredictor.h
include/util/: BoundingBox.h  Detection.h  Tracking.h  classification.hpp
models/ssd/VGGNet/VOC0712Plus/SSD_512x512_ft/: deploy.prototxt  finetune_ssd_pascal_512.py  solver.prototxt  test.prototxt  train.prototxt
src/: CMakeLists.txt  main.cpp  synopsis.cpp
src/detector/: Detector.cpp  ssd_detect.cpp
src/tracker/: Affinity.cpp  ImageTracker.cpp  PAOT.cpp  RandomTracker.cpp  Tracker.cpp
src/tracker/predictor/: Predictor.cpp  StationaryPredictor.cpp
src/tracker/predictor/kalman/: KalmanPredictor.cpp
src/tracker/predictor/particle/: Particle.cpp  ParticleFilter.cpp  ParticlePredictor.cpp
src/util/: BoundingBox.cpp  Detection.cpp  Tracking.cpp  classification.cpp
